art/gstyle.css
body {
    text-align: center;
    padding: 0;
    margin: 0;
    margin-top: 3em;
    font-family: sans-serif;
}

#gallery {
    text-align: left;
    margin: 1.5em auto;
}

a, a:visited, a:active {
    color: #0099FF
}

h1 {
    font-size: 5em;
    font-weight: lighter;
    margin-bottom: 0.5em;
}

.picbox {
    display: inline-block;
    width: 300px;
    height: 300px;
    margin: 5px;
    background-clip: border-box;
    overflow: hidden;
    cursor: pointer;
}

.pic {
    width: 300px;
    height: 300px;
    transition: all .2s ease-in-out;
}

.pic:hover {
    transform: scale(1.05);
}

.detailbox {
    width: 100%;
    background-color: #e4e4e4;
    margin: 0;
    padding: 0;
    text-align: left;
    max-height: 0px;
    transition: all .5s ease-in-out;
    overflow: hidden;
}

.expandedBox {
    transition: all .5s ease-in-out;
    max-height: 90vh;
    height: auto;
}

.detail-img {
    max-width: 49%;
    max-height: 90vh;
}

.detail-words {
    padding: 3em;
    vertical-align: top;
    display: inline-block;
    max-width: 49%;
    box-sizing: border-box;
}

.detail-name {
    display: inline;
}

.tag {
    cursor: pointer;
    padding: 5px;
    border-radius: 3px;
    background-color: #e3e3e3;
    transition: all .2s ease-in-out;
}

.tag:hover {
    background-color: #0099FF;
    color: #fff;
}

.selected {
    background-color: #0099FF;
    color: #fff;
}

